--- a/assessment.html
+++ b/assessment.html
@@ -2,6 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="https://habukai97.github.io/assessment/assessment.html" />
+    <meta property="og:title" content="あなたのいいところ診断" />
+    <meta property="og:description" content="あなたの良いところ診断" />
     <link rel="stylesheet" href="assessment.css" />
     <title>あなたのいいところ診断</title>
   </head>
